--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ langchain_community==0.2.4
 python-dotenv==1.0.1
 neomodel==5.3.2
 sentence-transformers==3.0.1
+dash==2.18.0
+dash_bootstrap_components==1.6.0
+dash_cytoscape==1.0.2
