--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ streamlit_metadata/users_conversations.json
 visualization/plotly.py
 src/utils/populate_KT_with_code.ipynb
 *.mp4
+.vscode/settings.json
